--- a/Session_10_Assignment.ipynb
+++ b/Session_10_Assignment.ipynb
@@ -256,16 +256,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#Filter out samples with small sequence length... otherwise they need too much RAM.. system crash.\n",
+        "# Filter out samples with large sequence length... otherwise you need too much RAM.. system crash.\n",
+        "# Dataset too big... read every offset-th sample\n",
         "def filter_function(unfiltered_dataset, offset=1):\n",
-        "  output_list = []\n",
-        "  count = 0\n",
-        "  for sample in unfiltered_dataset:\n",
-        "    # print(sample)\n",
-        "    count+= 1\n",
-        "    if count%offset == 0 and len(sample[0].strip().split(' ')) < 100 and len(sample[1].strip().split(' ')) < 100:  #Dataset too big... read every offset-th row\n",
-        "      output_list.append(sample)\n",
-        "  return output_list"
+        "    output_list = []\n",
+        "    count = 0\n",
+        "    for sample in unfiltered_dataset:\n",
+        "        # print(sample)\n",
+        "        count+= 1\n",
+        "        if count%offset == 0 and len(sample[0].strip().split(' ')) < 100 and len(sample[1].strip().split(' ')) < 100:\n",
+        "          output_list.append(sample)\n",
+        "return output_list"
       ],
       "metadata": {
         "id": "-DP1P-iHX6_1"
